# doomrpg

./: CMakeLists.txt  README.md
src/: CDoomRPG.cpp  CDoomRPG.h  CMakeLists.txt  doomrpg_data.c  doomrpg_data.h  doomrpg_entities.h  doomrpg_graphics.c  doomrpg_graphics.h  doomrpg_sounds.h  main.cpp
src/Animation/: Animation.h  CTextureAnimation.cpp  CTextureAnimation.h
src/Camera/: CCamera.cpp  CCamera.h  CTurnBasedCamera.cpp  CTurnBasedCamera.h
src/Collision/: CCollisionHandler.cpp  CCollisionHandler.h
src/Config/: CConfig.cpp  CConfig.h
src/Console/: CConsole.cpp  CConsole.h  CConsoleCommand.h  CConsoleDefaults.h  CConsoleVariable.cpp  CConsoleVariable.h
src/Entity/: CDoor.cpp  CDoor.h  CEntity.h
src/Font/: Font.h
src/Game/: CGame.cpp  CGame.h  CGameDefaults.h  CGameLoop.cpp  CGameLoop.h  CGameState.h
src/Geometry/: AnimatedQuad.h  CAnimatedQuad.cpp  CAnimatedQuad.h  CAnimatedQuadList.cpp  CAnimatedQuadList.h  CGeometry.cpp  CGeometry.h
src/Input/: CInputAction.h
src/Interface/: ICollisionHandler.h  IEventHandler.h  IPlatform.h  IPresentHandler.h  IRenderHandler.h  IRenderer.h  ISystem.h  IUpdateHandler.h
src/Logger/: CLogger.cpp  CLogger.h
src/Manager/: CGeometryManager.cpp  CGeometryManager.h  CMaterialManager.cpp  CMaterialManager.h  CMeshManager.cpp  CMeshManager.h  CResourceManager.cpp  CResourceManager.h
src/Material/: CMaterial.cpp  CMaterial.h  Material.h
src/Mesh/: CAnimatedMesh.cpp  CAnimatedMesh.h  CAnimatedMeshStateful.cpp  CAnimatedMeshStateful.h  CMesh.cpp  CMesh.h
src/Object/: CObject.cpp  CObject.h
src/Player/: CPlayer.cpp  CPlayer.h
src/Pool/: CPool.h
src/Renderer/: VertexComponents.h
src/Resource/: CAnimation.cpp  CAnimation.h  CFont.cpp  CFont.h  CMap.cpp  CMap.h  CMusic.cpp  CMusic.h  CResource.cpp  CResource.h  CShader.cpp  CShader.h  CSound.cpp  CSound.h  CTexture.cpp  CTexture.h
src/Scene/: CBSPTree.cpp  CBSPTree.h  CSceneEntity.cpp  CSceneEntity.h  CScenePartitionTree.h
src/State/: CGameplayState.cpp  CGameplayState.h  CMenuState.cpp  CMenuState.h
src/System/: CAnimationSystem.cpp  CAnimationSystem.h  CCameraSystem.cpp  CCameraSystem.h  CInputSystem.cpp  CInputSystem.h  CRenderSystem.cpp  CRenderSystem.h  CSceneSystem.cpp  CSceneSystem.h  CUISystem.cpp  CUISystem.h
src/Timer/: CTimer.cpp  CTimer.h
src/UI/: CDialog.cpp  CDialog.h  CStatus.cpp  CStatus.h  CUIElement.cpp  CUIElement.h  CUIElementStateful.cpp  CUIElementStateful.h  UIElement.h
src/Window/: CWindow.cpp  (+1 more)
(+32 files in other folders)
